# smartgenai

./: .gitignore  LICENSE  README.md  notes.md  pyproject.toml  requirements.txt
src/smartgenai/: app.py  ragWrapper.py
src/smartgenai/connectors/documents/: html.py  llamaparsePdf.py  simplePdf.py  txt.py
src/smartgenai/connectors/embeddings/: ollama.py  sentenceTransformer.py
src/smartgenai/connectors/llms/: AWSBaseModel.py  huggingFace.py  ollama.py  openai.py
src/smartgenai/connectors/llms/AWSModels/: Claude.py  Mistral.py  Titan.py
src/smartgenai/connectors/vstore/: ChromaDB.py  faiss.py
src/smartgenai/framework/: objectBase.py
src/smartgenai/framework/documents/: documentBaseObject.py  documentFactory.py
src/smartgenai/framework/embeddings/: embedding.py  embeddingsBaseObject.py  embeddingsFactory.py
src/smartgenai/framework/llms/: LLMBaseObject.py  LLMFactory.py
src/smartgenai/framework/sets/: chunks.py  nearest.py  prompt.py
src/smartgenai/framework/vstore/: vstoreBaseObject.py  vstoreFactory.py
src/smartgenai/interfaces/: IChunks.py  IDocument.py  IEmbeddings.py  ILLM.py  INearest.py  IPrompt.py  IRag.py  IVStore.py
src/smartgenai/utils/: CONST.py  trace.py
tests/: const_test.py  generic_test.py  llmPrompts_test.py  rag_test.py  wrapper_test.py  wrappers.py
